* commit 908c1a0c9c543a27d661169237292e579f947dac
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Jul 13 14:41:11 2015 -0400
| 
|     Added option to do phi averaging and specify the number of openmp threads. Also added command line arguments for saving the phi grid and/or the shadow function, but these are not yet operational.
|  
* commit 7fc7b58e3167566ad1d2c9cf8d4d206d2383f255
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat Jun 27 17:55:23 2015 -0400
| 
|     Updated version number
|  
* commit cf306a162ef45f90dcad9932e47c08e6f715f542
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat Jun 27 17:52:45 2015 -0400
| 
|     Added heuristic 1/ngrid correction to the thetax, thetay arrays; added no-sang-correction flag to turn this off
|  
* commit b88f93447ca96959d0ec124574e122f8a79259f2
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat Jun 27 17:28:37 2015 -0400
| 
|     Added a (1-1/ngrid) fudge factor to thetax,thetaz arrays; this aligns the numerical dQdOm with the analytical one. Maybe there's a bug that explain why this works so well?
|  
* commit ad5e46baf87626f49e0db7b196f9f3182b5c3fbd
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Sat Jun 27 13:49:58 2015 -0400
| 
|     small changes in cleandist-custom and remake bash scripts.
|  
* commit 2e7a55947ca01f39ff936faf1d43b155b53551d4
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Jun 26 17:12:54 2015 -0400
| 
|     Disabled maintainer mode; this hopefully should work...
|  
* commit 9ac3e8884684d7d4f7afa6dc5398fd3e5c27aeef
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Jun 26 16:55:07 2015 -0400
| 
|     this is just random attempts to make things installable by simply cloning the repository
|  
* commit 6e79852b1dbae495724bdca97895dbd5a929d736
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Thu Jun 25 13:46:01 2015 -0400
| 
|     Added some more information to the README file(s)
|  
* commit c6290420cefeef15e7e78d2528a5a1ac452f6973